k3s/2_service.yml
apiVersion: v1
kind: Service
metadata:
  name: techno-stack-template
  namespace: techno-stack-template
spec:
  ports:
  - name: techno-stack-template
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: techno-stack-template
  sessionAffinity: None
  type: ClusterIP
